force-app/main/default/objects/SFDC_Budget__c/SFDC_Budget__c.object-meta.xml
<CustomObject>
    <description>Allocate multiple requests and claims against a specific budget. Report allocated budget, approved claims, available balance, and unclaimed requests.</description>
    <label>MDF</label>
    <nameField>
        <label>Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDFs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>