force-app/main/default/objects/SFDC_Budget__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assign a budget to a given account. This is used especially for accrual based MDF.</description>
    <inlineHelpText>Assign the budget to a specific account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>