force-app/main/default/objects/SFDC_Budget__c/fields/Last_Refresh_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Refresh_Date__c</fullName>
    <description>The date &amp; time the budget was last refreshed/ calculated. The budget recalculates when a request or claim is approved, or a previously approved record is rejected</description>
    <label>Last Refresh Date</label>
    <type>DateTime</type>
</CustomField>