force-app/main/default/objects/SFDC_Budget__c/fields/Total_Active_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_Active_Budget__c</fullName>
    <description>The total budget summed up from &apos;Active&apos; budget entries</description>
    <inlineHelpText>The total dollar amount of the budget less any funds that have expired</inlineHelpText>
    <label>Total Active Budget</label>
    <summarizedField>SFDC_Budget_Entry__c.Total__c</summarizedField>
    <summaryFilterItems>
        <field>SFDC_Budget_Entry__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>SFDC_Budget_Entry__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>