force-app/main/default/objects/SFDC_Budget__c/fields/Unclaimed__c.field-meta.xml
<CustomField>
    <fullName>Unclaimed__c</fullName>
    <description>The value of total approved requests less total approved claims to date</description>
    <formula>Approved_Requests__c  -  Approved_Claims__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount of the approved requests that have not yet been claimed (approved requests less the fund claims)</inlineHelpText>
    <label>Unclaimed Requests</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>