force-app/main/default/objects/SFDC_Budget__c/recordTypes/MDF.recordType-meta.xml
<RecordType>
    <fullName>MDF</fullName>
    <active>true</active>
    <description>Use for discretionary marketing funds.</description>
    <label>MDF</label>
</RecordType>