force-app/main/default/objects/SFDC_Budget__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Active__c</columns>
    <columns>Total_Active_Budget__c</columns>
    <columns>Approved_Requests__c</columns>
    <columns>Available_Budget__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Budgets</label>
    <language>en_US</language>
    <sharedTo>
        <group>PartnerManagement</group>
        <group>PartnerPortalResellerGroupShared</group>
        <group>SystemAdministrator</group>
    </sharedTo>
</ListView>