force-app/main/default/objects/SFDC_Budget__c/listViews/MDFBasedBudgets.listView-meta.xml
<ListView>
    <fullName>MDFBasedBudgets</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Total_Active_Budget__c</columns>
    <columns>Approved_Requests__c</columns>
    <columns>Available_Budget__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SFDC_Budget__c.MDF</value>
    </filters>
    <label>MDF Based Budgets</label>
    <language>en_US</language>
    <sharedTo>
        <group>PartnerManagement</group>
        <group>PartnerPortalResellerGroupShared</group>
        <group>SystemAdministrator</group>
    </sharedTo>
</ListView>